--- a/babmukja/src/main/webapp/resources/css/notice/notice enroll.css
+++ b/babmukja/src/main/webapp/resources/css/notice/notice enroll.css
@@ -9,6 +9,10 @@
     color:rgba(0, 0, 255, 0.664);
     padding:8px;
 }
+#notice_update_img{
+	 width:130px;
+     height:65px;
+}
 
 .notice_commt{
     margin:0 auto;
