--- a/babmukja/src/main/webapp/resources/css/recipe/recipeCaDetail.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipeCaDetail.css
@@ -77,6 +77,7 @@ input[type='text']:focus {
     font-weight: bold;
     font-size: 25px;
     text-align: center;
+    color : white;
 }
 .profile-container{
     display: grid;
