--- a/babmukja/src/main/webapp/resources/css/footer.css
+++ b/babmukja/src/main/webapp/resources/css/footer.css
@@ -6,7 +6,7 @@ body::after{ content:''; display:block; height:100px; }
 
 footer{ 
   position:absolute; 
-/*   bottom:0;  */
+  bottom:0; 
   width:100%; 
 /*   height:100px;  */
   background: #7db341;
