--- a/babmukja/src/main/webapp/resources/css/recipe/recipemain.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipemain.css
@@ -62,13 +62,12 @@ html, body {
     }
 #sector1{
     width: 100%;
-    height: 700px;
+    height: 820px;
     display: grid;
     grid-template-columns: 50% 50%;
     font-family: 'East Sea Dokdo', cursive;
     color:white;
-    background-image:url(../../images/chalkboard.png);
-    background-size: cover;
+    background-image:url(../../images/chalkboard.jpg);
 }
 #sec1-content1-wrapper{
     display: grid;
