--- a/babmukja/src/main/webapp/resources/css/notice/notice list.css
+++ b/babmukja/src/main/webapp/resources/css/notice/notice list.css
@@ -84,7 +84,8 @@
 
 .inquirelist2 button{
   font-size:1em;	
-  background-color: #ff80c0;
+  background-color:khaki;
+  /* background-color: #ff80c0; */
 }
 
 .bntView{
