--- a/babmukja/src/main/webapp/resources/css/member/mypage.css
+++ b/babmukja/src/main/webapp/resources/css/member/mypage.css
@@ -115,6 +115,17 @@ body{
     border-radius: 100px;
     background: gainsboro;
 }
+#profile-change-button {
+	border: none;
+    background: #7db341;
+    border-radius: 5px;
+    color: white;
+    width: 150px;
+    height: 35px;
+}
+#profile-change-button:focus {
+	outline : none;
+}
 #updateform-sec2-userinfo-id{
     font-size: 30px;
     font-weight: lighter;
