--- a/babmukja/src/main/webapp/resources/css/store/listpb.css
+++ b/babmukja/src/main/webapp/resources/css/store/listpb.css
@@ -61,7 +61,7 @@
     margin-top: -35px;
     font-size: 20px;
     font-weight: bold;
-    color: gray;
+    color: tomato;
 }
 
 .pb_list_product_rating {
