레시피 css수정

--- a/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
@@ -216,6 +216,9 @@
 #go-back:hover{
 	color : #7db341;
 }
+#go-back:focus{
+	outline : none;
+}
 #post-info{
     display: flex;
     align-content: space-between;
