정래 버그 수정

--- a/babmukja/src/main/webapp/resources/css/meetup/temporary_detail.css
+++ b/babmukja/src/main/webapp/resources/css/meetup/temporary_detail.css
@@ -7,7 +7,7 @@
 }
 
 .headerLeft {
-    background-image: url(../../images/marble2.jpg);
+    background-image: url(../../images/.jpg);
     display: inline-block;
     border: 1px solid gainsboro;
     overflow: hidden;
